// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckoutPopUp /> renders closed 1`] = `
<Bootstrap(Modal)
  aria-labelledby="contained-modal-title-vcenter"
  centered={true}
  onHide={[Function]}
  show={false}
  size="lg"
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      id="contained-modal-title-vcenter"
    >
      Confirm order
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <div
      className="task-description-title"
    >
      Task description
    </div>
    <div
      className="task-description-content"
    >
      This is my task description
    </div>
    <Form
      inline={false}
    >
      <FormGroup
        className="email-form"
        controlId="formBasicEmail"
      >
        <FormControl
          onChange={[Function]}
          placeholder="Enter email"
          type="email"
          value="email@example.com"
        />
      </FormGroup>
    </Form>
    <CheckoutFormWrapper />
  </ModalBody>
</Bootstrap(Modal)>
`;

exports[`<CheckoutPopUp /> renders open 1`] = `
<Bootstrap(Modal)
  aria-labelledby="contained-modal-title-vcenter"
  centered={true}
  onHide={[Function]}
  show={true}
  size="lg"
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      id="contained-modal-title-vcenter"
    >
      Confirm order
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <div
      className="task-description-title"
    >
      Task description
    </div>
    <div
      className="task-description-content"
    >
      This is my task description
    </div>
    <Form
      inline={false}
    >
      <FormGroup
        className="email-form"
        controlId="formBasicEmail"
      >
        <FormControl
          onChange={[Function]}
          placeholder="Enter email"
          type="email"
          value="email@example.com"
        />
      </FormGroup>
    </Form>
    <CheckoutFormWrapper />
  </ModalBody>
</Bootstrap(Modal)>
`;
